# idfine-chatbot

./: .env.example  .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.yml  test-admin.html  test-chat.html  test-widget.html  widget-demo.html  widget-test.html
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: admin.py  auth.py  canned_responses.py  chat.py  customer.py  documents.py  live_support.py  odoo_proxy.py  products.py  reports.py  router.py  social_media.py  source_groups.py  sync.py  websocket.py  widget.py  widget_configs.py
backend/app/core/: exceptions.py  rate_limiter.py  security.py
backend/app/db/: database.py  seed.py
backend/app/meta/: handler.py  webhooks.py
backend/app/models/: __init__.py  activity_log.py  audit.py  canned_response.py  conversation.py  document.py  product.py  role.py  source_group.py  user.py  widget_config.py
backend/app/odoo/: base_adapter.py  json2_adapter.py  jsonrpc_adapter.py  models.py  webhooks.py
backend/app/schemas/: auth.py  canned_response.py  chat.py  document.py  odoo.py  product.py  source_group.py  widget_config.py
backend/app/services/: blacklist_service.py  cache_service.py  chat_service.py  connection_manager.py  conversation_flow.py  customer_session_service.py  document_service.py  email_service.py  embedding_service.py  intent_classifier.py  llm_service.py  meta_sender.py  odoo_service.py  odoo_sync_service.py  otp_service.py  rag_engine.py  (+2 more)
backend/scripts/: import_products_from_mysql.py  ingest_documents.py
(+25 files in other folders)
